[gd_scene load_steps=3 format=3 uid="uid://bmpkuptcx6is6"]

[ext_resource type="Script" uid="uid://da42yxe8ay78s" path="res://Weapons/WeaponTemplates/projectile.gd" id="1_1nclc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4d56h"]

[node name="Projectile" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_1nclc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4d56h")

[node name="LiveTimer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileSprite" type="Sprite2D" parent="."]

[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
